...
            onRefresh={onRefresh}
            tintColor={colors.primary}
            colors={[colors.primary]}
          />
      }
    >
      <Text style={globalStyles.pageTitle}>My Account</Text>

      {/* Basic Info */}
      <Card>
        <StatRow
          label="Username"
          value={profile?.username || "Loading..."}
...
          />
        )}
      </AccountSection>

    </ScrollView>
    <TouchableOpacity
      testID="account-settings-button"
      style={[
        globalStyles.button,
        globalStyles.buttonSecondary,
        globalStyles.settingsButton,
        { margin: 20 },
      ]}
...
